--- a/pixelegg/less/layout_raster_main.less
+++ b/pixelegg/less/layout_raster_main.less
@@ -108,7 +108,7 @@
 						background-color: @gray_90;
 					}
 				}
-				&:hover {
+				&:hover:not(.egw_fw_ui_tab_header_active) {
 					background-color: @color_hover_row;
 					padding-bottom: 0px;
 					border-top: 7px solid transparent;
